[project]
name = "langchain-doc"
version = "0.1.0"
description = "LangChain v1.2 官方文档学习仓库 - 完全按照文档顺序实践最新 LangChain 架构"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Chasen", email = "2558891266@qq.com"},
]
keywords = ["langchain", "llm", "agents", "langgraph", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LangChain 核心包
    "langchain>=1.0.0,<2.0.0",  # LangChain 主包 (LTS 版本)
    "langchain-core>=0.3.0",     # 核心接口和基础类
    "langchain-community>=0.3.0", # 社区集成组件
    "langgraph>=0.2.0,<2.0.0",   # LangGraph 代理运行时
    # 官方合作伙伴包
    "langchain-openai>=0.3.0",   # OpenAI 集成
    # 文本处理和向量存储
    "langchain-text-splitters>=0.3.0", # 文本分割工具
    "chromadb>=0.5.0",           # ChromaDB 向量数据库
    "tiktoken>=0.7.0",           # Token 计数
    # 工具和实用程序
    "python-dotenv>=1.0.0",      # 环境变量管理
    "pydantic>=2.0.0",           # 数据验证 (LangChain 依赖)
    "tenacity>=8.0.0",           # 重试机制
    # 可选的 API 提供商 SDK
    "openai>=1.0.0",             # OpenAI SDK
    "langchain-ollama>=1.0.1",
    "langgraph-checkpoint-postgres>=3.0.4",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

# 文档生成
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

# 测试工具
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# 这是一个学习项目，不需要打包多个目录
# 只打包 langchain_doc 主包（如果有的话）
exclude = ["Learn*", "Middleware*"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused import

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
